Fix extra margin issue for bottom block in twenty twenty

--- a/assets/blocks/course-list-block/course-list.scss
+++ b/assets/blocks/course-list-block/course-list.scss
@@ -128,6 +128,10 @@ $block: '.wp-block-sensei-lms-course-list';
 					.course-list-featured-label__course-categories {
 						margin-right: 10px;
 					}
+
+					.sensei-cta > * {
+						margin: 0px;
+					}
 				}
 				.wp-block-group__inner-container {
 					height: 100%;
